--- a/index/index.html
+++ b/index/index.html
@@ -18,12 +18,13 @@
             </a>
 
             <nav id="nav-header">
+                <a href="#" id="burger-menu"></a>
                 <ul>
                     <li><a href="#"> Cursos </a> </li>
                     <li><a href="#">Sobre nós</a></li>
                     <li><a href="#">Login</a></li>
                     <li><a href="#">
-                        <button class="btn" >Conhecer planos</button>
+                        <button class="btn">Conhecer planos</button>
                     </a></li>
                 </ul>
             </nav>
@@ -33,12 +34,10 @@
             <div id="home-left">
                 <h1 class="title title-h">Lorem Ipsum</h1>
                 <p class="text text-h">
-                    Lorem ipsum dolor sit amet elit,
-                    sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua.
-                    Ut enim ad minim venia.
+                    Lorem ipsum dolor sit amet elit,sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim venia.
                 </p>
-                <a href=""><button class="btn btn-h"> Nossos cursos</button></a>
+                <a href=""><button class="btn btn-h">Nossos cursos</button></a>
             </div>
             <div id="home-right">
                 <img src="img/woman.png" alt="Mulher com computador">
@@ -263,6 +262,8 @@
         </section>
         
         <p class="dev">Site desenvolvido por <span>MARCOS HENRIQUE</span></p>
+
+        <script src="script/index.js"></script>
     </footer>
 </body>
 </html>
