--- a/index/index.html
+++ b/index/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logotipo.</title>
     <link rel="stylesheet" href="style/index.css">
-    <link rel="stylesheet" href="style/responsiveTablet.css">
-    <link rel="stylesheet" href="style/responsiveMobile.css">
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 <body>
     <!-- Sessão do HOME (contém header)-->
@@ -20,10 +19,10 @@
             <nav id="nav-header">
                 <a href="#" id="burger-menu"></a>
                 <ul>
-                    <li><a href="#"> Cursos </a> </li>
-                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="#cursos"> Cursos </a> </li>
+                    <li><a href="#sobre-nos">Sobre nós</a></li>
                     <li><a href="#">Login</a></li>
-                    <li><a href="#">
+                    <li><a href="#planos">
                         <button class="btn">Conhecer planos</button>
                     </a></li>
                 </ul>
@@ -37,7 +36,7 @@
                     Lorem ipsum dolor sit amet elit,sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim venia.
                 </p>
-                <a href=""><button class="btn btn-h">Nossos cursos</button></a>
+                <a href="#cursos"><button class="btn btn-h">Nossos cursos</button></a>
             </div>
             <div id="home-right">
                 <img src="img/woman.png" alt="Mulher com computador">
@@ -63,7 +62,7 @@
                         <li>Lorem ipsum amet;</li>
                         <li>Lorem ipsum dolor amet;</li>
                     </ul>
-                    <a href="#"><button>Conferir planos</button></a>
+                    <a href="#planos"><button>Conferir planos</button></a>
                 </div>
 
                 <div class="box box-css">
@@ -76,7 +75,7 @@
                         <li>Lorem ipsum amet;</li>
                         <li>Lorem ipsum dolor amet;</li>
                     </ul>
-                    <a href="#"><button>Conferir planos</button></a>
+                    <a href="#planos"><button>Conferir planos</button></a>
                 </div>
 
                 <div class="box box-javascript">
@@ -89,7 +88,7 @@
                         <li>Lorem ipsum amet;</li>
                         <li>Lorem ipsum dolor amet;</li>
                     </ul>
-                    <a href="#"><button>Conferir planos</button></a>
+                    <a href="#planos"><button>Conferir planos</button></a>
                 </div>
 
                 <div class="box WordPress">
@@ -102,7 +101,7 @@
                         <li>Lorem ipsum amet;</li>
                         <li>Lorem ipsum dolor amet;</li>
                     </ul>
-                    <a href="#"><button>Conferir planos</button></a>
+                    <a href="#planos"><button>Conferir planos</button></a>
                 </div>
             </section>
         </div>
@@ -228,9 +227,10 @@
                 <section class="nav-menu">
                     <h2 class="nav-title">Menu</h2>
                     <ul class="nav-list">
-                        <a href="#"><li>Cursos</li></a>
-                        <a href="#"><li>Sobre nós</li></a>
+                        <a href="#cursos"><li>Cursos</li></a>
+                        <a href="#sobre-nos"><li>Sobre nós</li></a>
                         <a href="#"> <li>Login</li></a>
+                        <a href="#planos"> <li>Planos</li></a>
                     </ul>
                 </section>
 
@@ -246,9 +246,9 @@
                 <section class="nav-menu">
                     <h2 class="nav-title">Planos</h2>
                     <ul class="nav-list">
-                        <a href="#"><li>Básico</li></a>
-                        <a href="#"><li>Plus</li></a>
-                        <a href="#"> <li>Prime</li></a>
+                        <a href="#planos"><li>Básico</li></a>
+                        <a href="#planos"><li>Plus</li></a>
+                        <a href="#planos"> <li>Prime</li></a>
                     </ul>
                 </section>
             </nav>
